--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,8 @@
 
 trigger:
 - master
-
+parameters:
+  - name: branch
 variables:
   # Azure Resource Manager connection created during pipeline creation
   azureSubscription: '718ff221-6e55-4c06-8072-20a820806ead'
