Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@
 trigger: none
 parameters:
   - name: branch
-    default: false
+    default: none
     displayName: Name of the branch to be deployed
     type: string
 variables:
