--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,7 @@ stages:
     pool:
       name: Default
     steps:
+    - checkout: Avinash-Potpally/first@(development)
     - task: ArchiveFiles@2
       displayName: 'Archive files'
       inputs:
